# youtube-script-generator

./: README.md  ci.yml  docker-compose.yml  pyproject.toml
.github/: .gitignore  Dockerfile  Makefile
src/youtube_script_agent/: main.py
src/youtube_script_agent/agents/: executor.py  workflow.py
src/youtube_script_agent/analyzers/: competitor.py  fact_checker.py  sentiment.py
src/youtube_script_agent/core/: constants.py
src/youtube_script_agent/generators/: media.py  scripts.py
src/youtube_script_agent/scrapers/: comments.py  hashtags.py  twitter.py
src/youtube_script_agent/utils/: file_manager.py  filters.py  logger.py
